# scope-audio-beep

./: .gitignore  README.md  pyproject.toml
.claude/hooks/: format.py
scope_plugin_audio_beep/: plugin.py
scope_plugin_audio_beep/pipelines/audio_beep/: pipeline.py  schema.py
